--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -682,6 +682,7 @@ input[type='text'] {
   font-weight: 600 !important;
   color: #000000 !important;
   margin: 0 !important;
+  word-break: break-all !important;
 }
 
 .searchResultDescription {
